# router-flow

./: .gitignore  Cargo.toml  README.md
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/engine/: scoring.rs
crates/shared/src/geo/: mod.rs
crates/shared/src/models/: assignment.rs  courier.rs  mod.rs  order.rs
proto/: Cargo.toml  build.rs
proto/src/: assignment.proto  collector.proto  lib.rs  location.proto  order.proto
services/assignment-optimizer/: Cargo.toml
services/assignment-optimizer/src/: config.rs  engine.rs  grpc_clients.rs  grpc_server.rs  main.rs  state.rs
services/city-simulator/: Cargo.toml
services/city-simulator/src/: config.rs  courier.rs  grpc.rs  main.rs  movement.rs  simulation.rs
services/event-collector/: Cargo.toml
services/event-collector/src/: aggregator.rs  config.rs  grpc_client.rs  grpc_server.rs  main.rs  metrics.rs  state.rs
services/order-generator/: Cargo.toml
services/order-generator/src/: config.rs  generator.rs  grpc.rs  main.rs  patterns.rs
services/tui-monitor/: Cargo.toml
services/tui-monitor/src/: config.rs  main.rs  state.rs  streams.rs  ui.rs
