[package]
name = "event-collector"
version.workspace = true
edition.workspace = true

[dependencies]
router-flow-proto = { path = "../../proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
tokio-stream = { version = "0.1.18", features = ["sync"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
