[package]
name = "order-generator"
version.workspace = true
edition.workspace = true

[dependencies]
router-flow-proto = { path = "../../proto" }
router-flow-shared = { path = "../../crates/shared" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
tokio-stream = { version = "0.1.18", features = ["sync"] }
rand = "0.8"
