[package]
name = "tui-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
router-flow-proto = { path = "../../proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3"
